fixed image position on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -369,7 +369,7 @@ input[type=text], textarea {
     .logo {
         position: absolute;
         top: 20px;
-        right: 100px;
+        right: 110px;
         width: 200px;
     }
 
